Spacing fix for mobile homepage splash
As per https://app.asana.com/0/1165831083759477/1179525072726149/f

--- a/source/sass/c_local/10_layout/_splash.home.sass
+++ b/source/sass/c_local/10_layout/_splash.home.sass
@@ -144,7 +144,6 @@
       margin-right: 0
       margin-left: 0
       padding: rv(2)
-      padding-top: 0
       display: flex
       flex-direction: column
       justify-content: flex-start
